Fix white space issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,8 +11,9 @@
   padding-top: 20px;
 }
 
-body {
+body, html {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
